[package]
version = "0.1.0"
name = "fibonacci-script"
edition = "2021"
default-run = "fibonacci"

[[bin]]
name = "fibonacci"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[dependencies]
sp1-sdk = "2.0.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
fibonacci-lib = { path = "../lib" }
tokio = { version = "1.40.0", features = ["full"] }
rustls = "0.23.14"
tokio-rustls = "0.26.0"
webpki-roots = "0.26.6"
tokio-stream = "0.1.16"
webpki = "0.22.4"
rustls-native-certs = "0.8.0"
openssl = "0.10.66"
alloy-primitives = "0.8.8"

[build-dependencies]
sp1-helper = "2.0.0"
